input-sys/include/libinput.1.7.0.h


struct libinput;
struct libinput_device;
struct libinput_tablet_tool;
struct libinput_event;
struct libinput_event_tablet_pad;
enum libinput_button_state {
	LIBINPUT_BUTTON_STATE_RELEASED = 0,
	LIBINPUT_BUTTON_STATE_PRESSED = 1
};
enum libinput_tablet_pad_ring_axis_source {
	LIBINPUT_TABLET_PAD_RING_SOURCE_UNKNOWN = 1,
	LIBINPUT_TABLET_PAD_RING_SOURCE_FINGER,
};
enum libinput_tablet_pad_strip_axis_source {
	LIBINPUT_TABLET_PAD_STRIP_SOURCE_UNKNOWN = 1,
	LIBINPUT_TABLET_PAD_STRIP_SOURCE_FINGER,
};
struct libinput_tablet_pad_mode_group;
struct libinput_tablet_pad_mode_group*
libinput_device_tablet_pad_get_mode_group(struct libinput_device *device,
					  unsigned int index);
unsigned int
libinput_tablet_pad_mode_group_get_mode(struct libinput_tablet_pad_mode_group *group);
struct libinput_tablet_pad_mode_group *
libinput_tablet_pad_mode_group_ref(
			struct libinput_tablet_pad_mode_group *group);
struct libinput_tablet_pad_mode_group *
libinput_tablet_pad_mode_group_unref(
			struct libinput_tablet_pad_mode_group *group);
enum libinput_switch_state {
	LIBINPUT_SWITCH_STATE_OFF = 0,
	LIBINPUT_SWITCH_STATE_ON = 1,
};
enum libinput_switch {
	LIBINPUT_SWITCH_LID = 1,
};
struct libinput_event_switch;
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
void *
libinput_tablet_tool_get_user_data(struct libinput_tablet_tool *tool);
void
libinput_tablet_tool_set_user_data(struct libinput_tablet_tool *tool,
				   void *user_data);
struct libinput_event *
libinput_event_tablet_pad_get_base_event(struct libinput_event_tablet_pad *event);
double
libinput_event_tablet_pad_get_ring_position(struct libinput_event_tablet_pad *event);
unsigned int
libinput_event_tablet_pad_get_ring_number(struct libinput_event_tablet_pad *event);
enum libinput_tablet_pad_ring_axis_source
libinput_event_tablet_pad_get_ring_source(struct libinput_event_tablet_pad *event);
double
libinput_event_tablet_pad_get_strip_position(struct libinput_event_tablet_pad *event);
unsigned int
libinput_event_tablet_pad_get_strip_number(struct libinput_event_tablet_pad *event);
enum libinput_tablet_pad_strip_axis_source
libinput_event_tablet_pad_get_strip_source(struct libinput_event_tablet_pad *event);
uint32_t
libinput_event_tablet_pad_get_button_number(struct libinput_event_tablet_pad *event);
enum libinput_button_state
libinput_event_tablet_pad_get_button_state(struct libinput_event_tablet_pad *event);
unsigned int
libinput_event_tablet_pad_get_mode(struct libinput_event_tablet_pad *event);
struct libinput_tablet_pad_mode_group *
libinput_event_tablet_pad_get_mode_group(struct libinput_event_tablet_pad *event);
uint32_t
libinput_event_tablet_pad_get_time(struct libinput_event_tablet_pad *event);
uint64_t
libinput_event_tablet_pad_get_time_usec(struct libinput_event_tablet_pad *event);
enum libinput_switch
libinput_event_switch_get_switch(struct libinput_event_switch *event);
enum libinput_switch_state
libinput_event_switch_get_switch_state(struct libinput_event_switch *event);
struct libinput_event *
libinput_event_switch_get_base_event(struct libinput_event_switch *event);
uint32_t
libinput_event_switch_get_time(struct libinput_event_switch *event);
uint64_t
libinput_event_switch_get_time_usec(struct libinput_event_switch *event);