input-sys/src/gen.rs

extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Return the user data associated with a tool object. libinput does
 * not manage, look at, or modify this data. The caller must ensure the
 * data is valid.
 *
 * @param tool The libinput tool
 * @return The user data associated with the tool object
 */
    pub fn libinput_tablet_tool_get_user_data(tool: *mut libinput_tablet_tool)
     -> *mut libc::c_void;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * Set the user data associated with a tool object, if any.
 *
 * @param tool The libinput tool
 * @param user_data The user data to associate with the tool object
 */
    pub fn libinput_tablet_tool_set_user_data(tool: *mut libinput_tablet_tool,
                                              user_data: *mut libc::c_void);
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_tablet_pad_get_base_event(event:
                                                        *mut libinput_event_tablet_pad)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the current position of the ring, in degrees counterclockwise
 * from the northern-most point of the ring in the tablet's current logical
 * orientation.
 *
 * If the source is @ref LIBINPUT_TABLET_PAD_RING_SOURCE_FINGER,
 * libinput sends a terminating event with a ring value of -1 when the
 * finger is lifted from the ring. A caller may use this information to e.g.
 * determine if kinetic scrolling should be triggered.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_RING.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The current value of the the axis
 * @retval -1 The finger was lifted
 */
    pub fn libinput_event_tablet_pad_get_ring_position(event:
                                                           *mut libinput_event_tablet_pad)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the number of the ring that has changed state, with 0 being the
 * first ring. On tablets with only one ring, this function always returns
 * 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_RING.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The index of the ring that changed state
 */
    pub fn libinput_event_tablet_pad_get_ring_number(event:
                                                         *mut libinput_event_tablet_pad)
     -> libc::c_uint;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the source of the interaction with the ring. If the source is
 * @ref LIBINPUT_TABLET_PAD_RING_SOURCE_FINGER, libinput sends a ring
 * position value of -1 to terminate the current interaction.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_RING.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The source of the ring interaction
 */
    pub fn libinput_event_tablet_pad_get_ring_source(event:
                                                         *mut libinput_event_tablet_pad)
     -> libinput_tablet_pad_ring_axis_source;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the current position of the strip, normalized to the range
 * [0, 1], with 0 being the top/left-most point in the tablet's current
 * logical orientation.
 *
 * If the source is @ref LIBINPUT_TABLET_PAD_STRIP_SOURCE_FINGER,
 * libinput sends a terminating event with a ring value of -1 when the
 * finger is lifted from the ring. A caller may use this information to e.g.
 * determine if kinetic scrolling should be triggered.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_STRIP.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The current value of the the axis
 * @retval -1 The finger was lifted
 */
    pub fn libinput_event_tablet_pad_get_strip_position(event:
                                                            *mut libinput_event_tablet_pad)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the number of the strip that has changed state, with 0 being the
 * first strip. On tablets with only one strip, this function always returns
 * 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_STRIP.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The index of the strip that changed state
 */
    pub fn libinput_event_tablet_pad_get_strip_number(event:
                                                          *mut libinput_event_tablet_pad)
     -> libc::c_uint;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the source of the interaction with the strip. If the source is
 * @ref LIBINPUT_TABLET_PAD_STRIP_SOURCE_FINGER, libinput sends a strip
 * position value of -1 to terminate the current interaction.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_STRIP.  For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return The source of the strip interaction
 */
    pub fn libinput_event_tablet_pad_get_strip_source(event:
                                                          *mut libinput_event_tablet_pad)
     -> libinput_tablet_pad_strip_axis_source;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Return the button number that triggered this event, starting at 0.
 * For events that are not of type @ref LIBINPUT_EVENT_TABLET_PAD_BUTTON,
 * this function returns 0.
 *
 * Note that the number returned is a generic sequential button number and
 * not a semantic button code as defined in linux/input.h.
 * See @ref tablet-pad-buttons for more details.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_BUTTON. For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return the button triggering this event
 */
    pub fn libinput_event_tablet_pad_get_button_number(event:
                                                           *mut libinput_event_tablet_pad)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Return the button state of the event.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_TABLET_PAD_BUTTON. For other events, this function
 * returns 0.
 *
 * @param event The libinput tablet pad event
 * @return the button state triggering this event
 */
    pub fn libinput_event_tablet_pad_get_button_state(event:
                                                          *mut libinput_event_tablet_pad)
     -> libinput_button_state;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the mode the button, ring, or strip that triggered this event is
 * in, at the time of the event.
 *
 * The mode is a virtual grouping of functionality, usually based on some
 * visual feedback like LEDs on the pad. See @ref tablet-pad-modes for
 * details. Mode indices start at 0, a device that does not support modes
 * always returns 0.
 *
 * Mode switching is controlled by libinput and more than one mode may exist
 * on the tablet. This function returns the mode that this event's button,
 * ring or strip is logically in. If the button is a mode toggle button
 * and the button event caused a new mode to be toggled, the mode returned
 * is the new mode the button is in.
 *
 * Note that the returned mode is the mode valid as of the time of the
 * event. The returned mode may thus be different to the mode returned by
 * libinput_tablet_pad_mode_group_get_mode(). See
 * libinput_tablet_pad_mode_group_get_mode() for details.
 *
 * @param event The libinput tablet pad event
 * @return the 0-indexed mode of this button, ring or strip at the time of
 * the event
 *
 * @see libinput_tablet_pad_mode_group_get_mode
 */
    pub fn libinput_event_tablet_pad_get_mode(event:
                                                  *mut libinput_event_tablet_pad)
     -> libc::c_uint;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * Returns the mode group that the button, ring, or strip that triggered
 * this event is considered in. The mode is a virtual grouping of
 * functionality, usually based on some visual feedback like LEDs on the
 * pad. See @ref tablet-pad-modes for details.
 *
 * The returned mode group is not refcounted and may become invalid after
 * the next call to libinput. Use libinput_tablet_pad_mode_group_ref() and
 * libinput_tablet_pad_mode_group_unref() to continue using the handle
 * outside of the immediate scope.
 *
 * @param event The libinput tablet pad event
 * @return the mode group of the button, ring or strip that caused this event
 *
 * @see libinput_device_tablet_pad_get_mode_group
 */
    pub fn libinput_event_tablet_pad_get_mode_group(event:
                                                        *mut libinput_event_tablet_pad)
     -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    /**
 * @ingroup event_tablet
 *
 * @param event The libinput tablet pad event
 * @return The event time for this event
 */
    pub fn libinput_event_tablet_pad_get_time(event:
                                                  *mut libinput_event_tablet_pad)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_tablet_pad
 *
 * @param event The libinput tablet pad event
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_tablet_pad_get_time_usec(event:
                                                       *mut libinput_event_tablet_pad)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_switch
 *
 * Return the switch that triggered this event.
 * For pointer events that are not of type @ref
 * LIBINPUT_EVENT_SWITCH_TOGGLE, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_SWITCH_TOGGLE.
 *
 * @param event The libinput switch event
 * @return The switch triggering this event
 */
    pub fn libinput_event_switch_get_switch(event: *mut libinput_event_switch)
     -> libinput_switch;
}
extern "C" {
    /**
 * @ingroup event_switch
 *
 * Return the switch state that triggered this event.
 * For switch events that are not of type @ref
 * LIBINPUT_EVENT_SWITCH_TOGGLE, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_SWITCH_TOGGLE.
 *
 * @param event The libinput switch event
 * @return The switch state triggering this event
 */
    pub fn libinput_event_switch_get_switch_state(event:
                                                      *mut libinput_event_switch)
     -> libinput_switch_state;
}
extern "C" {
    /**
 * @ingroup event_switch
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_switch_get_base_event(event:
                                                    *mut libinput_event_switch)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_switch
 *
 * @param event The libinput switch event
 * @return The event time for this event
 */
    pub fn libinput_event_switch_get_time(event: *mut libinput_event_switch)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_switch
 *
 * @param event The libinput switch event
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_switch_get_time_usec(event:
                                                   *mut libinput_event_switch)
     -> u64;
}
